--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "https":"~1.0.0",
     "express-ws":"~0.2.6",
     "bluebird": "~3.0.6",
-    "string-format":"~0.5.0",
+    "string-format":"~0.5.0"
   }
 }
