--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "config": "^1.17.1",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
